<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_edit"
            android:enabled="true"
            android:title="@string/edit"
            android:icon="@mipmap/edit"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_delete"
            android:enabled="true"
            android:title="@string/delete"
            android:icon="@mipmap/baseline_delete_black_24dp"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_close"
            android:enabled="true"
            android:title="@string/close"
            android:icon="@mipmap/baseline_close_black_24dp"
            app:showAsAction="ifRoom"/>
</menu>