<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@drawable/copy"
              android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_style"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">
        <TextView android:layout_width="fill_parent"
                  android:text="Branch"
                  android:layout_weight="1"
                  android:gravity="center_vertical|center_horizontal"
                  android:padding="5dp"
                  android:textSize="16sp"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="fill_parent"
                  android:text="@string/location"
                  android:layout_weight="0.95"
                  android:gravity="center_vertical|center_horizontal"
                  android:padding="5dp"
                  android:textSize="16sp"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="fill_parent"
                  android:text="@string/item"
                  android:layout_weight="1"
                  android:gravity="center_vertical|center_horizontal"
                  android:padding="5dp"
                  android:textSize="16sp"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="fill_parent"
                  android:text="@string/qty"
                  android:layout_weight="1"
                  android:gravity="center_vertical|center_horizontal"
                  android:padding="5dp"
                  android:textSize="16sp"
                  android:layout_height="wrap_content"/>

    </LinearLayout>
    <ListView
            android:background="@drawable/border_style"
            android:id="@+id/list_summery"
            android:layout_width="match_parent" android:layout_height="match_parent">

    </ListView>
</LinearLayout>